--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "mysql": "^2.16.0",
+    "python-shell": "^1.0.6",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-hot-loader": "^3.0.0-beta.6"
