--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "electron-compile": "^6.4.3",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "mui-datatables": "^2.0.0-beta-39",
     "mysql": "^2.16.0",
     "python-shell": "^1.0.6",
     "react": "^16.3.0",
